Bug 118883 - Copying shapes between Draw/Writer not working (LibO 6.2)
Summary: Copying shapes between Draw/Writer not working (LibO 6.2)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0 target:7.2.0 target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: 118870
  Show dependency treegraph
 
Reported: 2018-07-22 14:16 UTC by Telesto
Modified: 2025-10-29 06:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-07-22 14:16:08 UTC
Description:
Copying shapes between Draw/Writer not working

Steps to Reproduce:
1. Open Draw
2. Insert anything: arrow/square/smiley
3. Copy it
4. Open a writer document
5. Paste

Actual Results:
Nothing pasted

Expected Results:
Should be working


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 6.2.0.0.alpha0+
Build ID: fa881095bc62c3646406c82a98d8503377288a54
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-07-22_03:27:00
Locale: nl-NL (nl_NL); Calc: CL

but not in
Versie: 6.1.0.2
Build ID: b3972dcf1284967612d5ee04fea9d15bcf0cc106
CPU-threads: 4; Besturingssysteem: Windows 6.3; UI-render: standaard; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 1 Roman Kuznetsov 2018-07-22 16:26:55 UTC
confirmed in

Version: 6.2.0.0.alpha0+ (x64)
Build ID: fa881095bc62c3646406c82a98d8503377288a54
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-07-22_04:57:13
Locale: ru-RU (ru_RU); Calc: CL

regression, because it works in 6.1.0.1
Comment 2 Regina Henschel 2018-07-22 18:16:39 UTC
Recently introduced regression.
Works at least till Version: 6.2.0.0.alpha0+ (x64)
Build ID: 2c85607101e2e04e870e3b87362f39f9a9148e6c
CPU threads: 8; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-06-16_00:12:37
Locale: de-DE (en_US); Calc: CL
Comment 3 Regina Henschel 2018-07-22 19:24:08 UTC
OK in Version: 6.2.0.0.alpha0+ (x64)
Build ID: a5b9bb7be70c7aec2388199e68a0cf86dd220955
CPU threads: 8; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-07-08_00:46:06
Locale: en-US (en_US); Calc: CL

Broken in Version: 6.2.0.0.alpha0+ (x64)
Build ID: de6b0c6edce0b9237fa43d12e258bf5fa568f6a7
CPU threads: 8; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-07-16_05:06:14
Locale: en-US (en_US); Calc: CL
Comment 4 Regina Henschel 2018-07-22 20:35:06 UTC
OK in Version: 6.2.0.0.alpha0+ (x64)
Build ID: d27e4007c697f5eb78181181a0ddcd663ac265b2
CPU threads: 8; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-07-10_00:34:24
Locale: en-US (en_US); Calc: CL

Broken in Version: 6.2.0.0.alpha0+ (x64)
Build ID: 8e9d43546c8e46ea635472ddf07f5c183dc13360
CPU threads: 8; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-07-11_23:54:00
Locale: en-US (en_US); Calc: group threaded
Comment 5 Xisco Faulí 2018-07-22 21:56:21 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=eb6ff07605a55675e7007ac0cb5604fb13a9ddf9

author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2018-07-06 12:45:31 +0200
committer	Tomaž Vajngerl <quikee@gmail.com>	2018-07-10 16:14:59 +0200
commit eb6ff07605a55675e7007ac0cb5604fb13a9ddf9 (patch)
tree 6d5899b5aa7befa5d0c87e78ae8e5cd1e803f7bb
parent 76b4820076eb24a4f3e5c8583c117cbf09fb8a8a (diff)
[API CHANGE] tdf#65353 Add more doc. settings more embedding fonts
- Add setting to embed used fonts only
- Add setting for filtering of Latin, Asian, Complex script fonts

Bisected with: bibisect-linux64-6.2

Adding Cc: to Tomaž Vajngerl
Comment 6 Xisco Faulí 2018-07-30 09:06:09 UTC
let's increase the severity
Comment 7 Tomaz Vajngerl 2018-08-15 16:41:48 UTC
Fixed... https://gerrit.libreoffice.org/#/c/59121/

Incoming when it passes the tests
Comment 8 Commit Notification 2018-08-15 19:00:45 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=757b2438b172b3ef4560e533b3ce2a10f699f2bd

tdf#118883 reinstate the try block to not throw on copy/paste

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2018-08-16 13:57:42 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: a6a2cc8f0e6501b92988accee2c3674dcfb05a2f
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Tomaž Vajngerl, should it be closed as RESOLVED FIXED ?
Comment 10 Commit Notification 2021-05-18 19:16:39 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/67b5e875c65c5ed72a170a03d33992edd3802c75

tdf#118883: sw: Add UItest

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-10-29 06:39:40 UTC
Okhuomon Ajayi committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2954ca548ed7575702a3dc66d37960a21bf89021

tdf#168520 Rename tdf101313, tdf107847, tdf118883, tdf124675 tests to

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.