tdf#118883 reinstate the try block to not throw on copy/paste

Seems the defnesive approach wasn't enough to ward against the
exception being thrown when creating a clipboard document when
copy/pasting between documents.

Change-Id: Iedcfbc6fe054b46fc26005b1ea0dbadbd21a08cb